# shared-brain

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  MANIFEST.in  README.md  brain  brain_engine.py  brain_i18n.py  demo.cast  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: ideas.yml  lessons-shared.yml  q-and-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_lesson.md
.github/workflows/: test.yml
completions/: brain.bash  brain.zsh
demo/: demo_recording.cast  demo_script.sh  gumroad-starter-kit-draft.md
docs/: _config.yml  api.md  brain.1  cheatsheet.md  faq.md  index.md  installation.md  lessons.md  ops-dashboard.html  p1-evidence-2026-02-14.md  troubleshooting.md  tutorial.md
examples/: 01-basic-guard.sh  02-custom-lesson.sh  03-claude-code-hook.sh
lessons/: api-put-safety.yaml  cdp-recovery-not-workaround.yaml  cdp-use-helper-not-custom.yaml  dont-delete-without-confirm.yaml  no-secrets-in-code.yaml  note-no-markdown.yaml  test-before-deploy.yaml  tweet-use-cdp.yaml  zenn-api-no-markdown-body.yaml
messages/: en.py  ja.py
shared_brain/: __init__.py  brain_engine.py  brain_i18n.py
shared_brain/lessons/: article-duplicate-check.yaml  backup-before-migration.yaml  cdp-dialog-new-tab.yaml  check-rate-limits.yaml  git-force-push.yaml  knowledge-execution-gap.yaml  no-production-db-direct.yaml  read-error-messages.yaml  stop-hook-self-violation.yaml  tachikoma-send-enter.yaml  verify-before-claim.yaml  (+1 more)
tests/: benchmark.py  test_brain.py
(+4 files in other folders)
