[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared-brain"
version = "0.1.1"
description = "AI agents that learn from each other's mistakes — and prove it."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "yurukusa"},
]
keywords = ["ai", "agents", "lessons", "guardrails", "audit", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/yurukusa/shared-brain"
Repository = "https://github.com/yurukusa/shared-brain"
Issues = "https://github.com/yurukusa/shared-brain/issues"

[project.scripts]
brain = "shared_brain.brain_engine:main"

[tool.setuptools.packages.find]
include = ["shared_brain*"]

[tool.setuptools.package-data]
shared_brain = ["lessons/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
